move settings to env variables, add template tag, refactoring

--- a/shrink_gun/templates/shrink_gun/url_form.html
+++ b/shrink_gun/templates/shrink_gun/url_form.html
@@ -1,6 +1,13 @@
-<html5>
-       <form method=POST>
-           {{ form.as_p }}
-           <Input type=submit value="RUN">
-        </form> 
-</html5>
+<!doctype html>
+<html lang="{{ LANGUAGE_CODE }}">
+<head>
+    <meta charset="UTF-8">
+    <title>Shrinkmeister test</title>
+</head>
+<body>
+<form method="post">
+    {{ form.as_p }}
+    <input type=submit value="RUN">
+</form>
+</body>
+</html>
